some findBugs proposed code improvements
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@27985 e5c1c795-43da-0310-a71f-fac65c449510